<?xml version="1.0"?>
<package format="2">
  <name>lanturn_launch</name>
  <version>3.1.1</version>
  <description>The lanturn_launch package contains launch files for launching lanturn with the DAVE project</description>
  <maintainer email="vs.victorsolis@gmail.com">vcss7</maintainer>
  <license>Apache2</license>
  <author email="vs.victorsolis@gmail.com">vcss7</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
